--- a/package.json
+++ b/package.json
@@ -37,12 +37,14 @@
     "test": "./test"
   },
   "dependencies": {
+    "node-forge": "^1.3.1",
     "soap": "^1.0.3"
   },
   "devDependencies": {
     "@eslint/js": "^9.4.0",
     "@types/eslint__js": "^8.42.3",
     "@types/eslint-plugin-mocha": "^10.4.0",
+    "@types/node-forge": "^1.3.11",
     "@types/sinon": "^17.0.3",
     "chai": "^5.1.1",
     "eslint": "^9.4.0",
