--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "description": "A Node.js module for interacting with the Czech Data Box system (ISDS).",
   "repository": {
     "type": "git",
-    "url": "https://github.com/martinkrivda/czech-data-box.git"
+    "url": "git+https://github.com/martinkrivda/czech-data-box.git"
   },
   "bugs": {
     "url": "https://github.com/martinkrivda/czech-data-box/issues"
