--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -16,7 +16,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        node: [16, 18, 20, 22]
+        node: [18, 20, 22]
     steps:
       - name: Checkout ${{ matrix.node }}
         uses: actions/Checkout@v3
